--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,16 @@
-*.iml
+# Eclipse
+.classpath
+.project
+.settings/
 
+# Intellij
+.idea/
+*.iml
+*.iws
+
+# Mac
+.DS_Store
+
+# Maven
+log/
+target/
