--- a/supervisord/apache2.conf
+++ b/supervisord/apache2.conf
@@ -1,5 +1,4 @@
 [program:apache2]
-command=/bin/bash -c "source /etc/apache2/envvars && /usr/sbin/apache2 -DFOREGROUND"
-priority=999
+command=/usr/bin/pidproxy /var/run/apache2/apache2.pid /bin/bash -c "source /etc/apache2/envvars && /usr/sbin/apache2 -DFOREGROUND"
 stdout_logfile=/tmp/%(program_name)s.stdout
 stderr_logfile=/tmp/%(program_name)s.stderr
